--- a/app/globals.css
+++ b/app/globals.css
@@ -1,12 +1,24 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+/* styles/globals.css */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
+body {
+  font-family: 'Roboto', system-ui;
+}
+.plaster-regular {
+    font-family: "Plaster", system-ui;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
 .myinput{
     background-color: transparent;
     outline: none;
     border-bottom: 2px solid black;
 }
+
 .myinput::placeholder{
     color: black;
     outline: none;
